.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Activity_Question__c.object
<CustomObject>
    <description>Captures question and answer data related to activities during the life cycle of a service request</description>
    <fields>
        <fullName>Incap311__Answer_Date_Time__c</fullName>
        <label>Answer Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Answer__c</fullName>
        <label>Answer</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Secure__c</fullName>
        <formula>Incap311__Service_Type_Version_Question__r.Incap311__Question__r.Incap311__Is_Secure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Secure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <formula>Incap311__Outcome_Question__r.Incap311__Order2__c</formula>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outcome Question</label>
        <referenceTo>Incap311__Outcome_Question__c</referenceTo>
        <relationshipName>Activity_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Question_Code__c</fullName>
        <formula>IF(ISBLANK(Incap311__Service_Type_Version_Question__r.Incap311__Question__r.Incap311__Flex_Question_Code__c),
 Incap311__Outcome_Question__r.Incap311__Question_Code__c,
 Incap311__Service_Type_Version_Question__r.Incap311__Question__r.Incap311__Flex_Question_Code__c)</formula>
        <label>Question Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Question_Source_Type__c</fullName>
        <formula>IF(
    NOT(ISBLANK(Incap311__Service_Type_Version_Question__c)),
    &quot;Intake Question&quot;,
    IF(
        NOT(ISBLANK(Incap311__Outcome_Question__c)),
        &quot;Resolution Question&quot;,
        &quot;&quot;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Question__c</fullName>
        <description>Copy of the question from the related Service Version Type Question that this Service Question references.</description>
        <label>Question</label>
        <length>4800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Activity__c</fullName>
        <label>Service Activity</label>
        <referenceTo>Incap311__Service_Activity__c</referenceTo>
        <relationshipLabel>Activity Questions</relationshipLabel>
        <relationshipName>Activity_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activity Questions</relationshipLabel>
        <relationshipName>Activity_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type Version Question</label>
        <referenceTo>Incap311__Service_Type_Version_Question__c</referenceTo>
        <relationshipName>Activity_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activity Question</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AQ-{00000000}</displayFormat>
        <label>Activity Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>